--- a/index.html
+++ b/index.html
@@ -44,43 +44,7 @@
             <a class="view_locations" href="platser.html"> Besök nu </a>
         </article>
 
-        <article class="about" id="about_anchor">
-            <div class="about_text_restaurant">
-                <h3> Om oss</h3>
-                <p> Välkommen till Ericks Pannkakor, den väletablerade restaurangen här i Sverige där alla våra läckra
-                    rätter tillagas automatiskt. Med en genuin passion för matlagning strävar vi efter att ge våra
-                    gäster en minnesvärd matupplevelse. Vårt team av dedikerade kockar och ingenjörer arbetar hårt med
-                    pannkaksmaskinen för att säkerställa enastående service och servera utsökta rätter gjorda av de
-                    finaste ingredienserna. Oavsett om du är sugen på traditionella svenska pannkakor eller utforskar
-                    vår varierade meny, så garanterar vi en smakfull gastronomisk resa som kommer att få dig att vilja
-                    återkomma. Kom och njut hos Ericks Pannkakor, där varje måltid är en hyllning till smaker och svensk
-                    kultur.
-                </p>
-            </div>
-            <img src="/img/Klas.PNG" alt="Klas">
-
-            <div class=""
-
-        </article>
-
-        <article class="quote">
-            <p class="quote_text"> "Mmm pammakaka" - Måns Bullerstam certifierad pankak ätare</p>
-        </article>
-
-        <article class="message_article">
-            <div class="message_info">
-                <h4> Contact Us Today!</h4>
-                <p> Use our convenient contact form to get in touch with us. <br>
-                    We're always happy to answer any questions you may have and help you with your restaurant needs.</p>
-            </div>
-            <div class="message_input">
-                <form>
-                    Name
-                    E-mail
-                    Message
-                </form>
-            </div>
-        </article>
+        <h1 class="work_in_progress">Hemsida under uppbyggnad...</h1>
 
 
     </main>
