--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="CSS/css.css" rel='stylesheet'>
+    <link href="css/style.css" rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Rufina' rel='stylesheet'>
     <title>Ericks Pankakor</title>
     <style>
@@ -18,9 +18,6 @@
     <header>
         <h1 class="title"> Ericks Pankakor</h1>
         <div class="contact">
-            <a class="contact_option" href="404.html">
-                <img src="/IMG/order_icon.png" alt="order" class="media_icon">
-            </a>
             <a class="contact_option" href="#about_anchor">
                 <img src="/IMG/information_icon.png" alt="information" class="media_icon">
             </a>
@@ -28,8 +25,6 @@
                     class="media_icon"> </a>
             <a class="contact_option" href="[instagram]"> <img src="IMG/instagram_icon.png"
                     alt="Ericks pankakor instagram" class="media_icon"></a>
-            <a class="contact_option" href="[Call]"> <img src="IMG/phone_icon.png" alt="Call button" class="media_icon">
-            </a>
         </div>
     </header>
     <main>
