--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="view_locations" href="platser.html"> Besök nu </a>
         </article>
 
-        <h1 class="work_in_progress">Hemsida under uppbyggnad...</h1>
+        <h1 class="work_in_progress">Hemsida under uppbyggnad...Hippity hoppity</h1>
 
 
     </main>
