Added clock to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Rufina' rel='stylesheet'>
+    <script src="JS/script.js"></script>
     <title>Ericks Pankakor</title>
     <style>
         body {
@@ -16,7 +17,16 @@
 
 <body>
     <header>
-        <h1 class="title"> Ericks Pankakor</h1>
+        <h1 class="title" href="test.html"> Ericks Pankakor</h1>
+        <div class="menu">
+            <a class="menu_option" href="test.html">Hem</a>
+            <p>|</p>
+            <a class="menu_option" href="platser.html">Platser</a>
+            <p>|</p>
+            <a class="menu_option" href="omoss.html">Om oss</a>
+            <p>|</p>
+            <a class="menu_option" href="kontakt.html">Kontakt</a>
+        </div>
         <div class="contact">
             <a class="contact_option" href="#about_anchor">
                 <img src="/IMG/information_icon.png" alt="information" class="media_icon">
@@ -31,7 +41,27 @@
         <article class="article1">
             <div class="pancakebackground"></div>
             <div class="article1text">
-                <h2> Savor Authentic <br> Swedish Flavors</h2>
+                <div id="clock">
+                    <div id="days">
+                        <p class="time"></p>
+                        <p>Days</p>
+                    </div>
+                    <p>:</p>
+                    <div id="hours">
+                        <p class="time"></p>
+                        <p>Hours</p>
+                    </div>
+                    <p>:</p>
+                    <div id="minutes">
+                        <p class="time"></p>
+                        <p>Minutes</p>
+                    </div>
+                    <p>:</p>
+                    <div id="seconds">
+                        <p class="time"></p>
+                        <p>Seconds</p>
+                    </div>
+                </div>
                 <p> Indulge in mouthwatering Swedish pancakes at Ericks Pankakor.
                     <br> Experience a taste of Sweden like never before.
                 </p>
@@ -40,8 +70,6 @@
         </article>
 
         <h1 class="work_in_progress">Hemsida under uppbyggnad...Hippity hoppity</h1>
-
-
     </main>
     <footer>
         <div class="footer_lable">
