Start on info layout

--- a/index.html
+++ b/index.html
@@ -17,16 +17,23 @@
 
 <body>
     <header>
-        <h1 class="title" href="test.html"> Ericks Pankakor</h1>
-        <div class="menu">
-            <a class="menu_option" href="test.html">Hem</a>
-            <p>|</p>
-            <a class="menu_option" href="platser.html">Platser</a>
-            <p>|</p>
-            <a class="menu_option" href="omoss.html">Om oss</a>
-            <p>|</p>
-            <a class="menu_option" href="kontakt.html">Kontakt</a>
+        <div></div>
+        <div class="title_menu">
+            <div class="menu">
+                <a class="menu_option" href="test.html">Hem</a>
+                <p>|</p>
+                <a class="menu_option" href="platser.html">Platser</a>
+                <p>|</p>
+            </div>
+            <h1 class="title" href="test.html"> Ericks Pankakor</h1>
+            <div class="menu">
+                <p>|</p>
+                <a class="menu_option" href="omoss.html">Om oss</a>
+                <p>|</p>
+                <a class="menu_option" href="kontakt.html">Kontakt</a>
+            </div>
         </div>
+    
         <div class="contact">
             <a class="contact_option" href="#about_anchor">
                 <img src="/IMG/information_icon.png" alt="information" class="media_icon">
@@ -66,10 +73,26 @@
                     <br> Experience a taste of Sweden like never before.
                 </p>
             </div>
-            <a class="view_locations" href="platser.html"> Besök nu </a>
+            <a class="button_white" href="platser.html"> Besök nu </a>
         </article>
-
-        <h1 class="work_in_progress">Hemsida under uppbyggnad...Hippity hoppity</h1>
+        <article class="article_info">
+            <section class="section_info">
+                <img src="" alt="" class="info_img">
+                <div class="text_info">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam, suscipit ullam perspiciatis, quis aliquam dolorum ducimus ea quibusdam officiis nisi voluptates officia aperiam quae quas ab voluptatum voluptatem eveniet!</p>
+                    <a href="[om_oss]" class="button_black">Mer om oss</a>
+                </div>
+            </section>
+            <section class="section_info">
+                <!--Ingen aning om vilken information vi vill ha här-->
+                <!--priser, säljtillfällen?-->
+                <div class="text_info">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum officia quis est nobis, reiciendis sequi aut esse adipisci. Ex ipsa nam dolorem veniam necessitatibus sapiente, maxime neque eum aliquid dicta.</p>
+                    <a href="[Hippity]" class="button_black">Hoppity?</a>
+                </div>
+                <img src="" alt="" class="info_img">
+            </section>
+        </article>
     </main>
     <footer>
         <div class="footer_lable">
