lite små förändringar
updaterad main page, länk till tiktok, gjort en simpel kontakt sida.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div></div>
         <div class="title_menu">
             <div class="menu">
-                <a class="menu_option" href="test.html">Hem</a>
+                <a class="menu_option" href="index.html">Hem</a>
                 <p>|</p>
                 <a class="menu_option" href="platser.html">Platser</a>
                 <p>|</p>
             </div>
-            <h1 class="title" href="test.html"> Ericks Pankakor</h1>
+            <h1 class="title"> Ericks Pankakor</h1>
             <div class="menu">
                 <p>|</p>
-                <a class="menu_option" href="omoss.html">Om oss</a>
+                <a class="menu_option" href="om_oss.html">Om oss</a>
                 <p>|</p>
                 <a class="menu_option" href="kontakt.html">Kontakt</a>
             </div>
@@ -38,15 +38,21 @@
             <a class="contact_option" href="#about_anchor">
                 <img src="/IMG/information_icon.png" alt="information" class="media_icon">
             </a>
-            <a class="contact_option" href="[fb]"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
+            <a class="contact_option" href="https://www.facebook.com/profile.php?id=61553624949995"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
                     class="media_icon"> </a>
-            <a class="contact_option" href="[instagram]"> <img src="IMG/instagram_icon.png"
+            <a class="contact_option" href="https://www.instagram.com/ericks_pankakor/"> <img src="IMG/instagram_icon.png"
                     alt="Ericks pankakor instagram" class="media_icon"></a>
+            <a class="contact_option" href="https://www.tiktok.com/@erickspankakor"> <img src="IMG/tiktok-32.png"
+                    alt="Ericks pankakor tiktok" class="media_icon"></a>
         </div>
     </header>
     <main>
         <article class="article1">
             <div class="pancakebackground"></div>
+            <div>
+                <h2>nästa försäljning</h2>
+                
+            </div>
             <div class="article1text">
                 <div id="clock">
                     <div id="days">
@@ -69,31 +75,54 @@
                         <p>Seconds</p>
                     </div>
                 </div>
+                <div class="newsletter-form">
+                    <p>Bli påmind</p>
+                    <form
+                      id="myForm"
+                      action="https://docs.google.com/forms/d/e/1FAIpQLSdV3JvlCBLZDZIoR3FvulFieD_oMTd_3W0ZwsvWOseF9RSVHg/formResponse"
+                      method="POST"
+                    >
+                      <div class="input-group">
+                        <input
+                          name="entry.2089670584"
+                          type="email"
+                          id="email"
+                          placeholder="exempel@email.com"
+                          required
+                        />
+                      </div>
+                      <div class="input-group">
+                        <button type="submit">Skicka</button>
+                      </div>
+                    </form>
+                </div>
                 <p> Indulge in mouthwatering Swedish pancakes at Ericks Pankakor.
                     <br> Experience a taste of Sweden like never before.
                 </p>
             </div>
             <a class="button_white" href="platser.html"> Besök nu </a>
         </article>
-        <article class="article_info">
-            <section class="section_info">
-                <img src="" alt="" class="info_img">
-                <div class="text_info">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam, suscipit ullam perspiciatis, quis aliquam dolorum ducimus ea quibusdam officiis nisi voluptates officia aperiam quae quas ab voluptatum voluptatem eveniet!</p>
-                    <a href="[om_oss]" class="button_black">Mer om oss</a>
-                </div>
-            </section>
-            <section class="section_info">
-                <!--Ingen aning om vilken information vi vill ha här-->
-                <!--priser, säljtillfällen?-->
-                <div class="text_info">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum officia quis est nobis, reiciendis sequi aut esse adipisci. Ex ipsa nam dolorem veniam necessitatibus sapiente, maxime neque eum aliquid dicta.</p>
-                    <a href="[Hippity]" class="button_black">Hoppity?</a>
-                </div>
-                <img src="" alt="" class="info_img">
-            </section>
-        </article>
     </main>
+    <div class="more_text">
+    <article class="article_info">
+        <section class="section_info">
+            <img src="" alt="" class="info_img">
+            <div class="text_info">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium numquam, suscipit ullam perspiciatis, quis aliquam dolorum ducimus ea quibusdam officiis nisi voluptates officia aperiam quae quas ab voluptatum voluptatem eveniet!</p>
+                <a href="om_oss.html" class="button_black">Mer om oss</a>
+            </div>
+        </section>
+        <section class="section_info">
+            <!--Ingen aning om vilken information vi vill ha här-->
+            <!--priser, säljtillfällen?-->
+            <div class="text_info">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum officia quis est nobis, reiciendis sequi aut esse adipisci. Ex ipsa nam dolorem veniam necessitatibus sapiente, maxime neque eum aliquid dicta.</p>
+                <a href="[Hippity]" class="button_black">Hoppity?</a>
+            </div>
+            <img src="" alt="" class="info_img">
+        </section>
+    </article>
+</div>
     <footer>
         <div class="footer_lable">
             <p class="footer_title"> Ericks Pankakor UF </p>
@@ -112,7 +141,7 @@
         <div class="footer_info">
             <p>Origovägen 4 </p>
             <p> 412 58 Göteborg</p>
-            <p>info@erickspankakor.com </p>
+            <p>info@erickspankakor.net </p>
         </div>
     </footer>
 </body>
