--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
     <link href='https://fonts.googleapis.com/css?family=Rufina' rel='stylesheet'>
     <script src="JS/script.js"></script>
     <title>Ericks Pankakor</title>
-    <style>
-        body {
-            font-family: 'Rufina';
-        }
-    </style>
 </head>
 
 <body>
@@ -25,7 +20,7 @@
                 <a class="menu_option" href="platser.html">Platser</a>
                 <p>|</p>
             </div>
-            <h1 class="title" href="test.html"> Ericks Pankakor</h1>
+            <a href="index.html" class="title">Ericks Pankakor</a>
             <div class="menu">
                 <p>|</p>
                 <a class="menu_option" href="omoss.html">Om oss</a>
@@ -35,12 +30,9 @@
         </div>
     
         <div class="contact">
-            <a class="contact_option" href="#about_anchor">
-                <img src="/IMG/information_icon.png" alt="information" class="media_icon">
-            </a>
-            <a class="contact_option" href="[fb]"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
+            <a class="contact_option" href="https://www.facebook.com/profile.php?id=61553624949995" target="_blank"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
                     class="media_icon"> </a>
-            <a class="contact_option" href="[instagram]"> <img src="IMG/instagram_icon.png"
+            <a class="contact_option" href="https://www.instagram.com/ericks_pankakor" target="_blank"> <img src="IMG/instagram_icon.png"
                     alt="Ericks pankakor instagram" class="media_icon"></a>
         </div>
     </header>
@@ -51,22 +43,22 @@
                 <div id="clock">
                     <div id="days">
                         <p class="time"></p>
-                        <p>Days</p>
+                        <p>Dagar</p>
                     </div>
                     <p>:</p>
                     <div id="hours">
                         <p class="time"></p>
-                        <p>Hours</p>
+                        <p>Timmar</p>
                     </div>
                     <p>:</p>
                     <div id="minutes">
                         <p class="time"></p>
-                        <p>Minutes</p>
+                        <p>Minuter</p>
                     </div>
                     <p>:</p>
                     <div id="seconds">
                         <p class="time"></p>
-                        <p>Seconds</p>
+                        <p>Sekunder</p>
                     </div>
                 </div>
                 <p> Indulge in mouthwatering Swedish pancakes at Ericks Pankakor.
@@ -100,12 +92,11 @@
             <div class="media_links">
                 <a class="contact_option" href="#about"> <img src="IMG/information_icon.png" alt="Information button"
                         class="media_icon"> </a>
-                <a class="contact_option" href="[fb]"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
+                <a class="contact_option" href="https://www.facebook.com/profile.php?id=61553624949995" target="_blank"> <img src="IMG/facebook_icon.png" alt="Ericks pankakor facebook"
                         class="media_icon"> </a>
-                <a class="contact_option" href="[instagram]"> <img src="IMG/instagram_icon.png"
+                <a class="contact_option" href="https://www.instagram.com/ericks_pankakor" target="_blank"> <img src="IMG/instagram_icon.png"
                         alt="Ericks pankakor instagram" class="media_icon"></a>
-                <a class="contact_option" href="[Call]"> <img src="IMG/phone_icon.png" alt="Call button"
-                        class="media_icon"> </a>
+            
 
             </div>
         </div>
